--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://npmcdn.com/flatpickr/dist/themes/airbnb.css">
+  <link rel="stylesheet" href="{% static 'lightbox/css/lightbox.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_footer.css' %}">
@@ -36,7 +37,8 @@
   <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
   <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
   <script src="{% static 'js/flatpickr-conf.js' %}"></script>
-
+  <!-- lightbox -->
+  <script src="{% static 'lightbox/js/lightbox-plus-jquery.min.js' %}"></script>
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
 
