--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -248,7 +248,8 @@
     text-align: center;
     /* margin-right: 100px; */
 }
-.check-form input[type="text"]{
+
+.check-form input[type="text"] {
     margin-right: 120px;
 }
 
@@ -379,3 +380,9 @@
 }
 
 /* ----------media query for hous details page---------- */
+.img-fluid {
+    border-radius: 12px;
+    width: 288px;
+    height: 162px;
+    object-fit: cover;
+}
