--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -380,7 +380,7 @@
 }
 
 /* ----------media query for hous details page---------- */
-.img-fluid {
+.gallery-img {
     border-radius: 12px;
     width: 288px;
     height: 162px;
