--- a/blogs/templates/blogs/place_detail.html
+++ b/blogs/templates/blogs/place_detail.html
@@ -11,8 +11,8 @@
   <br>
   <br>
   <div class="row justify-content-center">
-    {% if images %}
-    {% for image in images %}
+    {% if place.image %}
+    {% for image in place.image.all %}
     <a href="{{ image.photo.url }}" data-lightbox="gallery-imgs">
       <img src="{{ image.photo.url }}" class="gallery-img">
     </a>
