--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -191,8 +191,10 @@
 
 .gallery div img {
     width: 100%;
+    height: 100%;
     display: block;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .gallery-img-1 {
@@ -380,6 +382,8 @@
 }
 
 /* ----------media query for hous details page---------- */
+
+/* ----- locality list / places list ----- */
 .gallery-img {
     border-radius: 12px;
     width: 288px;
