--- a/blogs/templates/blogs/locality_list.html
+++ b/blogs/templates/blogs/locality_list.html
@@ -46,15 +46,37 @@
   </div>
 </div>
 
+{% if page_obj.has_other_pages %}
 <div class="pagination">
-  <img src="{% static 'images/arrow.png' %}">
-  <span class="current">1</span>
-  <span>2</span>
-  <span>3</span>
-  <span>4</span>
-  <span>5</span>
-  <span>&middot; &middot; &middot; &middot;</span>
-  <span>20</span>
-  <img src="{% static 'images/arrow.png' %}" class="right-arrow">
+
+  {% if page_obj.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+        <img src="{% static 'images/arrow.png' %}">
+      </a>
+    </li>
+  {% endif %}
+
+  {% for p in page_obj.paginator.page_range %}
+    {% if page_obj.number == p %}
+      <li class="page-item current">
+        <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+      </li>
+    {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+      </li>
+    {% endif %}
+  {% endfor %}
+
+  {% if page_obj.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+        <img src="{% static 'images/arrow.png' %}" class="right-arrow">
+      </a>
+    </li>
+  {% endif %}
+
 </div>
+{% endif %}
 {% endblock %}
