--- a/blogs/templates/blogs/places_list.html
+++ b/blogs/templates/blogs/places_list.html
@@ -7,7 +7,7 @@
 <div class="container">
   <h1>Интересные места в Гунибском районе</h1>
   <div class="list-container">
-  {% for place in places_list %}
+  {% for place in page_obj.object_list %}
     <div class="container-left-col">
       <div class="object">
         <div class="object-img">
@@ -33,16 +33,39 @@
     {% endfor%}
   </div>
 
+  {% if page_obj.has_other_pages %}
   <div class="pagination">
-    <img src="{% static 'images/arrow.png' %}">
-    <span class="current">1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
-    <span>5</span>
-    <span>&middot; &middot; &middot; &middot;</span>
-    <span>20</span>
-    <img src="{% static 'images/arrow.png' %}" class="right-arrow">
+
+    {% if page_obj.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+          <img src="{% static 'images/arrow.png' %}">
+        </a>
+      </li>
+    {% endif %}
+
+    {% for p in page_obj.paginator.page_range %}
+      {% if page_obj.number == p %}
+        <li class="page-item current">
+          <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+        </li>
+      {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+        </li>
+      {% endif %}
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+          <img src="{% static 'images/arrow.png' %}" class="right-arrow">
+        </a>
+      </li>
+    {% endif %}
+
   </div>
+  {% endif %}
+
 </div>
 {% endblock %}
