--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
   {% include 'inc/_footer.html' %}
 
-  <script src="{% static 'js/functions.js' %}"></script>
+  <script src="{% static 'js/scripts.js' %}"></script>
   <!-- flatpickr -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
