--- a/accounts/templates/accounts/canceled.html
+++ b/accounts/templates/accounts/canceled.html
@@ -34,7 +34,7 @@
     </li>
   </ul>
   <ul class='nav-btn'>
-    <li><a href="#">Личные данные</a></li>
+    <li><a href="{% url 'accounts:personal_data' %}">Личные данные</a></li>
   </ul>
   {% endif %}
 </nav>
