--- a/accounts/templates/accounts/personal_data.html
+++ b/accounts/templates/accounts/personal_data.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 
 
-{% block title %}
-Личный кабинет
-{% endblock %}
-
 {% block content %}
 
 <nav id="navBar" class="navbar-white">
@@ -40,4 +36,10 @@
   {% endif %}
 </nav>
 
-{% endblock %}
+<div class="container">
+  {{ user }} <br>
+  {{ user.phone }} <br>
+  {{ user.email }} <br>
+</div>
+
+{% endblock content %}
