--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -460,6 +460,7 @@
     border: none;
     outline: none;
     background: #f0f0f0;
+    font-size: 16px;
 }
 
 .review-form button {
@@ -480,7 +481,7 @@
     transition: 0.5s;
 }
 
-.reviews{
+.reviews {
     margin: 50px 0 20px;
 }
 
@@ -502,6 +503,10 @@
     transition: 0.5s;
 }
 
+.reviews-col:hover {
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+}
+
 .reviews-col img {
     height: 40px;
     margin-left: 5px;
@@ -509,17 +514,86 @@
     border-radius: 50%;
 }
 
-.reviews-col h3{
+.reviews-col h3 {
     padding: 0;
 }
 
-.reviews-col p{
+.reviews-col p {
     margin-top: 15px;
     text-align: left;
 }
 
+#modalBtn {
+    cursor: pointer;
+    text-decoration: underline;
+}
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.modal-header{
+    padding: 30px 20px;
+}
+
+.modal-header span{
+    margin: 0;
+}
+
+.modal-header i{
+    font-size: 20px;
+}
+
+.closeBtn {
+    color: #aaa;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.closeBtn:hover,
+.closeBtn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 600px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+}
+
+.modal-body {
+    padding: 2px 16px;
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
 
 /* ----------media query for hous details page---------- */
 
