fix: ошибка отображения гостей в rooms_list

--- a/rooms/templates/rooms/rooms_list.html
+++ b/rooms/templates/rooms/rooms_list.html
@@ -27,7 +27,7 @@
             {% endif %}
           </p>
           <div class="object-price">
-            <p>{{ item.number_of_guests }} Гость</p>
+            <p>Гостей: {{ item.guests }}</p>
             <h4>{{ item.price }} р <span>/ ночь</span></h4>
           </div>
           <div class="button">
