--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -599,7 +599,7 @@
 
 /* ----- locality list / places list ----- */
 
-.detail-container{
+.detail-container {
     margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
@@ -615,27 +615,27 @@
     margin-top: 70px;
 }
 
-.container h1{
+.container h1 {
     margin-top: 25px;
 }
 
-.detail-left-col h1{
+.detail-left-col h1 {
     color: #333;
     font-weight: 600;
 
 }
 
-.detail-left-col p{
+.detail-left-col p {
     line-height: 1.3;
     font-size: 20px;
 }
 
-.obj-date{
+.obj-date {
     text-align: left;
     margin-top: 20px;
 }
 
-.right-col-img{
+.right-col-img {
     border: 1px solid #999;
     border-radius: 12px;
     padding: 10px;
@@ -650,4 +650,39 @@
     width: 100%;
     height: 170px;
     object-fit: cover;
+}
+
+/* ----- accounts ----- */
+
+.container-info{
+    background: #F7F7F7;
+    margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 20px;
+}
+
+.container-info p{
+    font-size: 20px;
+    text-align: center;
+}
+
+.info {
+    width: 75%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 15px;
+    grid-column-gap: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.info-item {
+    border: 1px solid #999;
+    padding: 15px;
+    border-radius: 10px;
+}
+.info-item p{
+    font-size: 20px;
+    text-align: left;
 }
