--- a/blogs/templates/blogs/places_list.html
+++ b/blogs/templates/blogs/places_list.html
@@ -33,32 +33,33 @@
     {% endfor%}
   </div>
 
+  <!-- Пагинация -->
   {% if page_obj.has_other_pages %}
   <div class="pagination">
 
     {% if page_obj.has_previous %}
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+        <a class="page-link" href="?{{ place }}page={{ page_obj.previous_page_number }}">
           <img src="{% static 'images/arrow.png' %}">
         </a>
       </li>
     {% endif %}
 
-    {% for p in page_obj.paginator.page_range %}
-      {% if page_obj.number == p %}
+    {% for page in page_obj.paginator.page_range %}
+      {% if page_obj.number == page %}
         <li class="page-item current">
-          <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+          <a class="page-link" href="?page={{ page }}">{{ page }}</a>
         </li>
-      {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
+      {% elif page > page_obj.number|add:-3 and page < page_obj.number|add:3 %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+          <a class="page-link" href="?{{ place }}page={{ page }}">{{ page }}</a>
         </li>
       {% endif %}
     {% endfor %}
 
     {% if page_obj.has_next %}
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+        <a class="page-link" href="?{{ place }}page={{ page_obj.next_page_number }}">
           <img src="{% static 'images/arrow.png' %}" class="right-arrow">
         </a>
       </li>
@@ -66,6 +67,7 @@
 
   </div>
   {% endif %}
+  <!-- end Пагинация -->
 
 </div>
 {% endblock %}
